Add linear job chains
